learning basics events

--- a/first-app/src/app/components/home/home.html
+++ b/first-app/src/app/components/home/home.html
@@ -1,14 +1,18 @@
 <p>Hello, {{ name }} !</p>
 
-<button [attr.aria-label]="ariaLabel" (click)="send()">cu</button>
+<button [attr.aria-label]="ariaLabel" (click)="send()">click</button>
 
 @if(mustShowTitle) {
 <h1>My Title</h1>
+
+} @else if(myProp){
+<h1>{{myProp}}</h1>
+
 } @else {
 <h1>veio nada</h1>
 }
 
 <!-- Basically, it's comparable to the react "key"  -->
 @for(item of listItems; track item.id){
-<p>{{item}}</p>
+<p>{{item.txt}}</p>
 }
